--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "with-foundry/lib/foundry-noir-helper"]
 	path = with-foundry/lib/foundry-noir-helper
 	url = https://github.com/0xnonso/foundry-noir-helper
+[submodule "lib/openzeppelin-contracts"]
+	path = lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
