--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "lib/foundry-noir-helper"]
+	path = lib/foundry-noir-helper
+	url = https://github.com/0xnonso/foundry-noir-helper
