[Frontend]: Replace the import path of the 'proofData' with the './circuits/zkVerify/final-output/ultraplonk_health_data_sharing_zkv.json' in the page.tsx

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ circuits/Verifier.toml
 circuits/test_verifyProof.toml
 
 circuits/zkVerify/output_zkverify_version_of_proof_pubs_vk/*
+
+circuits/zkVerify/final-output/ultraplonk_health_data_sharing_zkv.json
