--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,9 @@
     "next": "14.2.15",
     "react": "18",
     "react-dom": "18",
-    "zkverifyjs": "^0.6.0"
+    "zkverifyjs": "^0.6.0",
+    "dotenv": "^16.4.5",
+    "ethers": "^6.13.4"
   },
   "devDependencies": {
     "@types/node": "20",
