[Script - .env]: Add '0x' as a prefix for deploying EDU Chain

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@ ANVIL_RPC=
 SEPOLIA_RPC=https://sepolia.drpc.org
 EDU_CHAIN_RPC=https://rpc.open-campus-codex.gelato.digital
 
-LOCALHOST_PRIVATE_KEY=""
-SEPOLIA_PRIVATE_KEY=""
-EDU_CHAIN_PRIVATE_KEY=""
+LOCALHOST_PRIVATE_KEY=
+SEPOLIA_PRIVATE_KEY=
+EDU_CHAIN_PRIVATE_KEY=0x...
