[SC script]: Add '--skip-simulation' option to the 'forge script script/DeploymentAllContracts.s.sol'

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ circuits/test_verifyProof.toml
 circuits/zkVerify/output_zkverify_version_of_proof_pubs_vk/*
 
 circuits/zkVerify/final-output/ultraplonk_health_data_sharing_zkv.json
+
+node_modules
+package-lock.json
