--- a/app/package.json
+++ b/app/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "@talismn/connect-components": "1.1.9",
+    "dotenv": "^16.4.5",
+    "ethers": "^6.13.5",
     "next": "14.2.15",
     "react": "18",
     "react-dom": "18",
-    "zkverifyjs": "^0.6.0",
-    "dotenv": "^16.4.5",
-    "ethers": "^6.13.4"
+    "zkverifyjs": "^0.6.0"
   },
   "devDependencies": {
     "@types/node": "20",
