--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.15",
     "react": "18",
     "react-dom": "18",
+    "web3modal": "^1.9.12",
     "zkverifyjs": "^0.6.0"
   },
   "devDependencies": {
