--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aztec/bb.js": "0.63.1",
+    "@noir-lang/noir_js": "1.0.0-beta.0",
+    "@noir-lang/noir_wasm": "1.0.0-beta.0",
     "@talismn/connect-components": "1.1.9",
     "ethers": "^6.13.5",
     "next": "14.2.15",
