[circuit & Prover.example.toml]: Remove 'productId' & 'providerId'

--- a/circuits/Prover.example.toml
+++ b/circuits/Prover.example.toml
@@ -1,6 +1,6 @@
 #return = ""     # Don't write the return value here - Because the return value is the Struct data
-productId = "" # Either type "string" or "integer" is fine.
-providerId = ""
+
+# [NOTE]: Input of "Boolean" type should be write in number (True: "0" / False: "1")
 name = ""
 walletAddress = ""
 height = ""
@@ -12,7 +12,7 @@ blood_type = ""
 blood_pressure = ""
 heart_rate = ""
 average_hours_of_sleep = ""
-revealProviderId = "" # True: "0", False: "1"
+revealProviderId = ""
 revealName = ""
 revealWalletAddress = ""
 revealAge = ""
@@ -23,24 +23,4 @@ revealRaceType = ""
 revealBloodType = ""
 revealBloodPressure = ""
 revealHeartRate = ""
-revealAverageHoursOfSleep = "" # True: "0", False: "1"
-
-
-#############################################################################
-# [PENDING]: Write the "return" value in a Struct data format ("RevealedData") #
-#############################################################################
-
-# [return]
-# productId = ""
-# providerId = ""
-# name = ""
-# walletAddress = ""
-# height = ""
-# weight = ""
-# age = ""
-# gender = ""
-# race_type = ""
-# blood_type = ""
-# blood_pressure = ""
-# heart_rate = ""
-# average_hours_of_sleep = ""
+revealAverageHoursOfSleep = ""
