[circuit & circuit test + SC test]: Split 'blood_pressure' into the 'blood_pressure_systolic' and 'blood_pressure_diastolic' --> Now, the number of publicInput is '12'

--- a/circuits/Prover.example.toml
+++ b/circuits/Prover.example.toml
@@ -1,6 +1,6 @@
 #return = ""     # Don't write the return value here - Because the return value is the Struct data
 
-# [NOTE]: Input of "Boolean" type should be write in number (True: "0" / False: "1")
+# [NOTE]: Input of "Boolean" type should be write in a string number (True: "0" / False: "1")
 name = ""
 walletAddress = ""
 height = ""
@@ -9,10 +9,10 @@ age = ""
 gender = ""
 race_type = ""
 blood_type = ""
-blood_pressure = ""
+blood_pressure_systolic = ""
+blood_pressure_diastolic = ""
 heart_rate = ""
 average_hours_of_sleep = ""
-revealProviderId = ""
 revealName = ""
 revealWalletAddress = ""
 revealAge = ""
@@ -21,6 +21,7 @@ revealHeight = ""
 revealWeight = ""
 revealRaceType = ""
 revealBloodType = ""
-revealBloodPressure = ""
+revealBloodPressureSystolic = ""
+revealBloodPressureDiastolic = ""
 revealHeartRate = ""
 revealAverageHoursOfSleep = ""
