[.env.example]: Add description to the 'EDU_CHAIN_PRIVATE_KEY'

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ EDU_CHAIN_RPC=https://rpc.open-campus-codex.gelato.digital
 
 LOCALHOST_PRIVATE_KEY=
 SEPOLIA_PRIVATE_KEY=
-EDU_CHAIN_PRIVATE_KEY=0x...
+EDU_CHAIN_PRIVATE_KEY="<Please add a private key of your deployer walllet address on EDU Chain to here>"
