[FE - .env.example]: Add the HealthDataSharingExecutor contract address, which has already been deployed on Feb 13 and it has already been written in README

--- a/app/.env.example
+++ b/app/.env.example
@@ -5,5 +5,5 @@ NEXT_PUBLIC_EDU_CHAIN_RPC_URL="https://rpc.open-campus-codex.gelato.digital"
 NEXT_PUBLIC_ETH_ZKVERIFY_CONTRACT_ADDRESS="0x209f82A06172a8d96CF2c95aD8c42316E80695c1"
 NEXT_PUBLIC_EDU_CHAIN_ZKVERIFY_CONTRACT_ADDRESS="0x147AD899D1773f5De5e064C33088b58c7acb7acf"
 
-NEXT_PUBLIC_EDU_CHAIN_HEALTH_DATA_SHARING_EXECUTOR_CONTRACT_ADDRESS="<Deployed-address of the HealthDataSharingRequester contract on EDU Chain>"
-NEXT_PUBLIC_EDU_CHAIN_APP_CONTRACT_ADDRESS="<Deployed-address of the HealthDataSharingExecutor contract on EDU Chain>"
+NEXT_PUBLIC_EDU_CHAIN_HEALTH_DATA_SHARING_EXECUTOR_CONTRACT_ADDRESS="0x097eB4757edba7D2c398411C07091A5Ac8ce9FEe"
+NEXT_PUBLIC_EDU_CHAIN_APP_CONTRACT_ADDRESS="0x097eB4757edba7D2c398411C07091A5Ac8ce9FEe"
